# voice-over

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml
.playwright-mcp/: page-2026-06-07T13-18-16-265Z.yml  page-2026-06-08T03-28-25-024Z.yml  page-2026-06-08T03-57-58-943Z.yml  page-2026-06-08T08-22-43-694Z.yml  page-2026-06-08T13-19-43-014Z.yml
app/: __init__.py  config.py  core_facade.py  db.py  drive.py  main.py  models.py  providers.py  runtime_checks.py  runtime_config.py  service.py  voices.py  worker.py
app_core/: __init__.py  api.py  cfg.json  codec.json  params.json
app_core/codes/: model.py
app_core/configure/: base.py  config.py  contants.py  excepts.py  signal_hub.py  whispernet_config.py
app_core/language/: en.json  zh.json
app_core/process/: __init__.py  prepare_audio.py  signelobj.py  stt_fun.py  tts_fun.py  vad.py
app_core/providers/: __init__.py  contracts.py  registry.py
app_core/recognition/: __init__.py  _base.py  _deepgram.py  _funasr.py  _qwen3asr.py  _qwenasrlocal.py
app_core/task/: _base.py  _rate.py  dubbing.py  simple_runnable_qt.py  speaker_clone.py  speech2text.py  taskcfg.py  trans_create.py  translate_srt.py  update_ffmpeg.py
app_core/translator/: __init__.py  (+4 more)
docs/: API_CONTRACT.md
frontend/: README.md
scripts/: smoke_api.py  smoke_real_video.py  validate_phase1.py
tests/: test_api.py  test_api_contract.py  test_config.py  test_import_boundaries.py  test_provider_api.py  test_provider_contracts.py  test_repository.py  test_runtime_config.py  test_speaker_clone.py  test_stt_registry.py  test_translator_registry.py  test_tts_job.py  test_tts_registry.py  test_video_renew_output.py  test_vieneu_tts.py  test_voice_api.py  test_worker.py
web_core_reference/: __init__.py  api.py  cfg.json  params.json
(+150 files in other folders)
