[project]
name = "voice-over"
version = "0.1.0"
description = "Backend-first voice-over API with owned app_core runtime."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "numpy>=1.26",
    "pydantic>=2",
    "pydub>=0.25",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "srt>=3.5",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]
providers = [
    "azure-cognitiveservices-speech>=1.50",
    "dashscope>=1.25",
    "deepgram-captions>=2.0",
    "deepgram-sdk>=3,<4",
    "gradio-client>=1.0",
    "openai>=1.0",
    "zhconv>=1.4",
]
local-ai = [
    "funasr>=1.2",
    "librosa>=0.11",
    "modelscope>=1.32",
    "soundfile>=0.13",
    "torch>=2.9",
    "torchaudio>=2.9",
    "transformers>=4.57",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "app_core*"]
exclude = ["videotrans*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]